--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # Bot y Telegram
 python-telegram-bot==13.15
 urllib3==1.26.16
-
+scikit-learn
 # FOMM y procesamiento de imágenes/videos
 torch
 torchvision
