--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ python-telegram-bot==13.15
 urllib3==1.26.16
 scikit-learn
 pandas
+ffmpeg-python
 # FOMM y procesamiento de imágenes/videos
 torch
 torchvision
